[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
Werkzeug = "2.2.3"
WTForms = "^3.0.1"
email-validator = "^2.0.0"
Flask-Login = "^0.6.2"
Flask-Mail = "^0.9.1"
Flask-SQLAlchemy = "^3.0.3"
Flask-WTF = "^1.1.1"
Flask-Dropzone = "^1.6.0"
skein = "^0.8.2"
pyskein = "^1.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"